[package]
authors = ["Ben Simms <ben@bensimms.moe>"]
name = "keyboard-thing"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
# [[test]]
# name = "integration"
# harness = false

[dependencies]
bbqueue = "0.5.1"
cortex-m = { version = "0.7.4", features = ["linker-plugin-lto"] }
# critical-section = "0.2.7"
defmt = "0.3.1"
embassy = { git = "https://github.com/embassy-rs/embassy", features = [] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["nrf52840", "gpiote", "time-driver-rtc1"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = [] }
embassy-usb-serial = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-usb-hid = { git = "https://github.com/embassy-rs/embassy", features = [] }
embedded-io = { version = "0.2.0" }
heapless = { version = "0.7.11", features = ["ufmt-write", "ufmt-impl"] }
keyberon = { git = "https://github.com/simmsb/keyberon", branch = "master" }
nrf-smartled = { git = "https://github.com/simmsb/nrf-smartled", features = ["52840"] }
postcard = "0.7.3"
serde = { version = "1.0.137", features = ["derive"], default-features = false }
smart-leds = "0.3.0"
cortex-m-rt = "0.7.1"
futures = { version = "0.3.21", default-features = false, features = ["async-await"] }
usbd-hid = "0.6.0"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
ufmt = "0.1.0"

[features]
nightly = ["embassy-nrf/nightly", "embassy-nrf/unstable-traits", "embedded-io/async" ]
default = ["log-noop", "nightly"]
#debugger = ["defmt-rtt", "panic-probe"]
log-noop = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true # <-
# incremental = false
# opt-level = 3 # <-
# overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = 'false'
opt-level = 3 # <-
overflow-checks = false # <-
