[package]
name = "keyboard-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
image = "0.24.2"
keyboard_shared = { version = "0.1.0", path = "../keyboard_shared" }
tokio = { version = "1.19.1", features = ["rt", "macros"] }
tokio-serial = "5.4.3"
